# pd-else

./: .gitignore  CMakeLists.txt  README.md  pd.cmake
.github/workflows/: c-cpp.yml
Abstractions/Audio/: allpass.filt~.pd  playlist~.pd  voices~.pd
Abstractions/Control/: display.pd  equal.pd  filter.pd  markov.pd  score.pd  score2.pd  sequencer.pd
Abstractions/Merda/Modules/: adsr.m~.pd  brane.m~.pd  chorus.m~.pd  crusher.m~.pd  delay.m~.pd  drive.m~.pd  flanger.m~.pd  gendyn.m~.pd  instrument.m~.pd  lfo.m~.pd  noise.m~.pd  phaser.m~.pd  plaits.m~-help.pd  plaits.m~.pd  plate.rev.m~.pd  pluck.m~-help.pd  pluck.m~.pd  pm6.m~.pd  presets.m.pd  rm.m~.pd  seq.m~-help.pd  seq.m~.pd  seq8.m~-help.pd  seq8.m~.pd  sig.m~.pd  vca.m~.pd  vcf.m~.pd  vco.m~.pd
Classes/Source/: dir.c
Code_source/Abstractions/abs_objects/control/: display.pd  range.hsl.pd
Code_source/Abstractions/control/: range.hsl.pd
Code_source/Abstractions/libpd/: display.pd  range.hsl.pd
Code_source/Compiled/audio/: chance~.c  envgen~.c  match~.c  oscope~.c  pm~.c  rotate~.c  scope~.c  shaper~.c  spread~.c  tabreader~.c  trunc~.c  xgate~.c  xselect~.c
Code_source/Compiled/audio/circuit~/Source/: Components.h
Code_source/Compiled/audio/plaits~/: plaits~.cpp
Code_source/Compiled/audio/plaits~/plaits/: resources.h
Code_source/Compiled/audio/play.file~/: CMakeLists.txt
Code_source/Compiled/audio/sfont~/: sfont~.c  sfont~.pd_darwin
Code_source/Compiled/audio/sfz~/: CMakeLists.txt  README.md  sfz~.c  sfz~make.sh
Code_source/Compiled/control/: ceil.c  cents2ratio.c  ctl.in.c  else.c  floor.c  fold.c  function.c  hz2rad.c  keyboard.c  knob.c  merge.c  message.c  messbox.c  metronome.c  note.c  order.c  pic.c  quantizer.c  rad2hz.c  rand.f.c  rand.i.c  ratio2cents.c  rec.c  rescale.c  rint.c  separate.c  tabreader.c  trunc.c  var.c  voices.c  wrap2.c
Code_source/Compiled/extra_source/Aliases/: s2f~.c
Code_source/Compiled/signal/: filterdelay~.c
Code_source/Compiled/signal/sfont~/: sfont~.c
Code_source/Compiled/signal/sfz~/: CMakeLists.txt  README.md  sfz~.c  sfz~make.sh
Code_source/Compiled/signal/sfz~/sfizz/: CMakeLists.txt
Code_source/shared/: buffer.c  else_alloca.h  s_elseutf8.c
Code_source/shared/aubio/src/utils/: strutils.c
Documentation/Extra-files/: score-1.txt  score-2.txt  score-3.txt  score-ex1.pd
Documentation/Help-files/: autofade~-help.pd  bicoeff-help.pd  bl.saw2~-help.pd  bl.saw~-help.pd  bl.square~-help.pd  bl.tri~-help.pd  bl.vsaw~-help.pd  circuit~-help.pd  filter-help.pd  fonts-help..pd  fontsize-help.pd  gaterelease-help.pd  knob-help.pd  play.file~-help.pd  rand.hist-help.pd  rand.u-help.pd  score-help.pd  score2-help.pd  sequencer-help.pd  sfz~-help.pd  voices-help.pd
LICENSE/: About the Licenses.txt
Source/Audio/: beat~.c  bl.square~.c  bl.vsaw~.c  filterdelay~.c  lace~.c  match~.c  moog~.c  numbox~.c  pd.link~.c  pink~.c  play.file~.c  pluck~.c  pvretune~.c  rotate~.c  scope~.c  slew~.c  spread~.c  standard~.c  streamout~.c  trunc~.c  xgate~.c  xselect~.c
Source/Audio/circuit~/: CMakeLists.txt
Source/Audio/circuit~/Source/: Models.h
Source/Audio/plaits~/: plaits~.cpp
Source/Audio/plaits~/plaits/: resources.cc
Source/Audio/plaits~/stmlib/dsp/: dsp.h
Source/Audio/sfont~/: sfont~.c
Source/Audio/sfont~/FluidLite/src/: fluid_defsfont.c  fluid_defsfont.h
Source/Audio/sfz~/: CMakeLists.txt  sfz~.c
Source/Audio/sfz~/sfizz/: CMakeLists.txt
Source/Control/: bicoeff.c  click.c  delace.c  dir.c  else.c  fonts.c  function.c  knob.c  messbox.c  messcoll.c  note.c  order.c  popmenu.c  rand.f.c  rand.i.c  rand.u.c  sfload.c  voices.c
Source/Control/lua/: pd.lua
Source/Extra/: bicoeff.tcl  browser-else.tcl  browser-vanilla.tcl  knob_dialog.h  menu_dialog.h  note_dialog.h
Source/Shared/: blep.h  buffer.c  elsefile.c  elsefile.h  s_elseutf8.c  shared.cmake
Source/Shared/aubio/examples/: utils.h
Source/Shared/aubio/src/effects/: rubberband_utils.c  timestretch_dummy.c  timestretch_rubberband.c
Source/Shared/aubio/src/spectral/: phasevoc.h  specdesc.c  specdesc.h  statistics.c  tss.c
Source/Shared/aubio/src/synth/: wavetable.c
Source/Shared/aubio/src/tempo/: tempo.c
Source/Shared/aubio/src/utils/: scale.c  strutils.c  windll.c
Source/Shared/ffmpeg/: CMakeLists.txt  build_ffmpeg.sh
not yet or removed/extrafont/extrafont-1.3.1/: extrafont.tcl  futmp.tcl
not yet or removed/extrafont/extrafont-1.3.1/darwin-x64/: extrafont85.dylib
not yet or removed/extrafont/extrafont-source-1.3.1/: HOWTOBUILD.txt  cross-makefile  ms-build.bat  unix-makefile
not yet or removed/extrafont/extrafont-source-1.3.1/XBUILD/extrafont/: license.terms  pkgIndex.tcl
not yet or removed/extrafont/extrafont-source-1.3.1/src/: fontnameinfo.tcl
not yet or removed/extrafont/extrafont-source-1.3.1/tests/: extrafont-basic.test
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.0/: HOWTOBUILD.txt  cross-makefile  myNOTES.txt
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.0/docs/: doc.txt
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.0/src/: extrafont.c  extrautils.tcl  pkgIndex.tcl
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.0/tests/: all.tcl  extrafont-basic.test
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.1/: HOWTOBUILD.txt  cross-makefile  myNOTES.txt
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.1/docs/: doc.txt
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.1/src/: extrafont.c  extrafont.tcl  pkgIndex.tcl
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.2/: cross-makefile
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/tags/1.3/: ms-build.bat
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/trunk/: build.sh  ms-makefile  unix-makefile
not yet or removed/irrational-numbers-code-r1509-pkgs-extrafont-devkit/trunk/src/: extrafont.c
(+13 files in other folders)
